specs/blueprints/errors/validation/expected_fieldsets_got_field.eno
# Expecting fieldsets but getting a field

-- input
field: value
-- input

-- javascript
enolib.parse(input).fieldsets('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldsets('field');
-- php

-- python
enolib.parse(input).fieldsets('field')
-- python

-- ruby
Enolib.parse(input).fieldsets('field')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]


# Expecting fieldsets but getting a field with continuations

-- input
field:
| continuation
| continuation
-- input

-- javascript
enolib.parse(input).fieldsets('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldsets('field');
-- php

-- python
enolib.parse(input).fieldsets('field')
-- python

-- ruby
Enolib.parse(input).fieldsets('field')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | | continuation
 *    3 | | continuation
-- snippet

selection: [0,0] => [2,14]

# Expecting fieldsets but getting a field with continuations separated by idle lines

-- input
field: value
| continuation
| continuation

> comment
| continuation
-- input

-- javascript
enolib.parse(input).fieldsets('field');
-- javascript

-- php
Enolib\Parser::parse($input)->fieldsets('field');
-- php

-- python
enolib.parse(input).fieldsets('field')
-- python

-- ruby
Enolib.parse(input).fieldsets('field')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'field' were expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
 *    2 | | continuation
 *    3 | | continuation
 *    4 | 
 *    5 | > comment
 *    6 | | continuation
-- snippet

selection: [0,0] => [5,14]
